<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@mipmap/bm_wood"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <com.arp.solitaire.Board.BoardView
            android:id="@+id/boardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/buttonLayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/undoButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_solitaire"
                android:text="@string/undo"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/restartGameButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_solitaire"
                android:text="@string/restart"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/solutionButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_solitaire"
                android:text="@string/solution"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/helpButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_solitaire"
                android:text="@string/help"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/loadButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_solitaire"
                android:text="@string/load"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/saveButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_solitaire"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_solitaire"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/forwardButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_solitaire"
                android:text="@string/forward"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />

            <Button
                android:id="@+id/resetSolutionButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_solitaire"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/gameButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_solitaire"
                android:text="@string/game"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>



