<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_dark_grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_light_grey"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gameOverTitleextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/sampleTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/White"
            android:textColorHint="@color/White"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gameOverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sampleText"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/gameOverOKButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_grey"
            android:text="@string/DialogOK"
            android:textColor="@color/White" />

    </LinearLayout>

</LinearLayout>
