<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_warning_dark_red"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/dialog_warning_light_red"
        android:orientation="vertical">

        <TextView
            android:id="@+id/WarningTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@mipmap/bm_caution_symbol"
            android:drawablePadding="7dp"
            android:drawableStart="@mipmap/bm_caution_symbol"
            android:gravity="center_vertical"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/sampleTitle"
            android:textColor="@color/White"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/WarningTextTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/sampleText"
            android:textColor="@color/White"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ThreeButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/WarningButton3_1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_grey"
                android:maxLines="1"
                android:text="@string/DialogCancel"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:typeface="normal" />

            <Button
                android:id="@+id/WarningButton3_2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_grey"
                android:maxLines="1"
                android:text="@string/DialogYes"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:typeface="normal" />

            <Button
                android:id="@+id/WarningButton3_3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/button_grey"
                android:maxLines="1"
                android:text="@string/DialogNo"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TwoButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/WarningButton2_1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_grey"
                android:maxLines="1"
                android:text="@string/DialogCancel"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:typeface="normal" />

            <Button
                android:id="@+id/WarningButton2_2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_grey"
                android:maxLines="1"
                android:text="@string/DialogOK"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/OneButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/WarningButton1_1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_grey"
                android:maxLines="1"
                android:text="@string/DialogOK"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>